[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/brick.png" type="Texture" id=1]
[ext_resource path="res://scene/explorativeAgent.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/goal0.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gold.png" type="Texture" id=4]
[ext_resource path="res://UIscripts/monitoring.gd" type="Script" id=5]
[ext_resource path="res://UIscripts/stateEntered.gd" type="Script" id=6]
[ext_resource path="res://UIscripts/stateExited.gd" type="Script" id=7]
[ext_resource path="res://UIscripts/programIndex.gd" type="Script" id=8]
[ext_resource path="res://rewardFunction/reward_function.gd" type="Script" id=9]
[ext_resource path="res://scene/executiveAgent.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "brick.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=5]

[node name="world" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 65579, 0, 0, 65580, 0, 0, 65581, 0, 0, 65582, 0, 0, 65583, 0, 0, 65584, 0, 0, 65585, 0, 0, 65586, 0, 0, 65587, 0, 0, 65588, 0, 0, 65589, 0, 0, 65590, 0, 0, 65591, 0, 0, 65592, 0, 0, 65593, 0, 0, 65594, 0, 0, 65595, 0, 0, 65596, 0, 0, 65597, 0, 0, 65598, 0, 0, 65599, 0, 0, 131072, 0, 0, 131073, 0, 0, 131134, 0, 0, 131135, 0, 0, 196608, 0, 0, 196609, 0, 0, 196670, 0, 0, 196671, 0, 0, 262144, 0, 0, 262145, 0, 0, 262206, 0, 0, 262207, 0, 0, 327680, 0, 0, 327681, 0, 0, 327742, 0, 0, 327743, 0, 0, 393216, 0, 0, 393217, 0, 0, 393278, 0, 0, 393279, 0, 0, 458752, 0, 0, 458753, 0, 0, 458814, 0, 0, 458815, 0, 0, 524288, 0, 0, 524289, 0, 0, 524350, 0, 0, 524351, 0, 0, 589824, 0, 0, 589825, 0, 0, 589886, 0, 0, 589887, 0, 0, 655360, 0, 0, 655361, 0, 0, 655422, 0, 0, 655423, 0, 0, 720896, 0, 0, 720897, 0, 0, 720958, 0, 0, 720959, 0, 0, 786432, 0, 0, 786433, 0, 0, 786494, 0, 0, 786495, 0, 0, 851968, 0, 0, 851969, 0, 0, 852030, 0, 0, 852031, 0, 0, 917504, 0, 0, 917505, 0, 0, 917566, 0, 0, 917567, 0, 0, 983040, 0, 0, 983041, 0, 0, 983102, 0, 0, 983103, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048638, 0, 0, 1048639, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114174, 0, 0, 1114175, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179710, 0, 0, 1179711, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245246, 0, 0, 1245247, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310782, 0, 0, 1310783, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376318, 0, 0, 1376319, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441854, 0, 0, 1441855, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507390, 0, 0, 1507391, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572926, 0, 0, 1572927, 0, 0, 1638400, 0, 0, 1638401, 0, 0, 1638462, 0, 0, 1638463, 0, 0, 1703936, 0, 0, 1703937, 0, 0, 1703998, 0, 0, 1703999, 0, 0, 1769472, 0, 0, 1769473, 0, 0, 1769534, 0, 0, 1769535, 0, 0, 1835008, 0, 0, 1835009, 0, 0, 1835070, 0, 0, 1835071, 0, 0, 1900544, 0, 0, 1900545, 0, 0, 1900606, 0, 0, 1900607, 0, 0, 1966080, 0, 0, 1966081, 0, 0, 1966122, 0, 0, 1966123, 0, 0, 1966124, 0, 0, 1966125, 0, 0, 1966126, 0, 0, 1966127, 0, 0, 1966128, 0, 0, 1966129, 0, 0, 1966130, 0, 0, 1966131, 0, 0, 1966132, 0, 0, 1966133, 0, 0, 1966134, 0, 0, 1966135, 0, 0, 1966136, 0, 0, 1966137, 0, 0, 1966138, 0, 0, 1966139, 0, 0, 1966140, 0, 0, 1966141, 0, 0, 1966142, 0, 0, 1966143, 0, 0, 2031616, 0, 0, 2031617, 0, 0, 2031658, 0, 0, 2031678, 0, 0, 2031679, 0, 0, 2097152, 0, 0, 2097153, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097214, 0, 0, 2097215, 0, 0, 2162688, 0, 0, 2162689, 0, 0, 2162750, 0, 0, 2162751, 0, 0, 2228224, 0, 0, 2228225, 0, 0, 2228286, 0, 0, 2228287, 0, 0, 2293760, 0, 0, 2293761, 0, 0, 2293822, 0, 0, 2293823, 0, 0, 2359296, 0, 0, 2359297, 0, 0, 2359298, 0, 0, 2359299, 0, 0, 2359300, 0, 0, 2359301, 0, 0, 2359302, 0, 0, 2359303, 0, 0, 2359304, 0, 0, 2359305, 0, 0, 2359306, 0, 0, 2359307, 0, 0, 2359308, 0, 0, 2359309, 0, 0, 2359310, 0, 0, 2359311, 0, 0, 2359312, 0, 0, 2359313, 0, 0, 2359314, 0, 0, 2359315, 0, 0, 2359316, 0, 0, 2359317, 0, 0, 2359318, 0, 0, 2359319, 0, 0, 2359320, 0, 0, 2359321, 0, 0, 2359322, 0, 0, 2359323, 0, 0, 2359324, 0, 0, 2359325, 0, 0, 2359326, 0, 0, 2359327, 0, 0, 2359328, 0, 0, 2359329, 0, 0, 2359330, 0, 0, 2359331, 0, 0, 2359332, 0, 0, 2359333, 0, 0, 2359334, 0, 0, 2359335, 0, 0, 2359336, 0, 0, 2359337, 0, 0, 2359338, 0, 0, 2359339, 0, 0, 2359340, 0, 0, 2359341, 0, 0, 2359342, 0, 0, 2359343, 0, 0, 2359344, 0, 0, 2359345, 0, 0, 2359346, 0, 0, 2359347, 0, 0, 2359348, 0, 0, 2359349, 0, 0, 2359350, 0, 0, 2359351, 0, 0, 2359352, 0, 0, 2359353, 0, 0, 2359354, 0, 0, 2359355, 0, 0, 2359356, 0, 0, 2359357, 0, 0, 2359358, 0, 0, 2359359, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2424875, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0 )

[node name="agent" type="Node2D" parent="."]
script = ExtResource( 9 )
agent_scene = ExtResource( 2 )
executive_Agent = ExtResource( 10 )

[node name="stateMachine" type="Node" parent="agent"]

[node name="monitoring" type="Node2D" parent="agent"]
script = ExtResource( 5 )

[node name="stateExited" type="Label" parent="agent/monitoring"]
margin_left = 24.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 22.0
script = ExtResource( 7 )

[node name="stateEntered" type="Label" parent="agent/monitoring"]
margin_left = 168.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 22.0
script = ExtResource( 6 )

[node name="programIndex" type="Label" parent="agent/monitoring"]
margin_left = 360.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 22.0
script = ExtResource( 8 )

[node name="generationIndicator" type="Label" parent="agent/monitoring"]
margin_left = 40.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 22.0

[node name="population" type="Label" parent="agent/monitoring"]
margin_left = 824.0
margin_top = 8.0
margin_right = 864.0
margin_bottom = 22.0

[node name="farthestDistance" type="Label" parent="agent/monitoring"]
margin_left = 584.0
margin_top = 8.0
margin_right = 624.0
margin_bottom = 22.0

[node name="pos" type="Position2D" parent="agent"]
position = Vector2( 56, 552 )

[node name="rewards" type="Node2D" parent="."]
visible = false

[node name="reward" type="Area2D" parent="rewards"]
position = Vector2( 328, 568 )

[node name="Sprite" type="Sprite" parent="rewards/reward"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rewards/reward"]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 5 )

[node name="reward2" type="Area2D" parent="rewards"]
position = Vector2( 552, 568 )

[node name="Sprite" type="Sprite" parent="rewards/reward2"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rewards/reward2"]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 5 )

[node name="reward3" type="Area2D" parent="rewards"]
position = Vector2( 744, 568 )

[node name="Sprite" type="Sprite" parent="rewards/reward3"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rewards/reward3"]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 5 )

[node name="goals" type="Node2D" parent="."]

[node name="goal1" parent="goals" instance=ExtResource( 3 )]
position = Vector2( 568, 568 )

[node name="goal2" parent="goals" instance=ExtResource( 3 )]
position = Vector2( 984, 472 )

[connection signal="child_exiting_tree" from="agent" to="agent" method="_on_agent_child_exiting_tree"]
